# reflect

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
backend/: .env.example  CLAUDE.md  pyproject.toml  test_async_agents.py
backend/src/: __init__.py
backend/src/agents/: agent_factory.py
backend/src/api/: main.py
backend/src/api/routes/: files.py  jobs.py
backend/src/api/schemas/: __init__.py  requests.py  responses.py  websocket.py
backend/src/api/websockets/: progress.py
backend/src/asset_annotator/: annotator.py  ear.py  eye.py  metronome.py
backend/src/asset_annotator/schemas/: asset_type.py  manifest.py  metronome.py
backend/src/common/: base_reflect_model.py  openai_model_identifier.py
backend/src/edit_executor/: __init__.py  providers.py  service.py
backend/src/edit_planner/: service.py
backend/src/edit_planner/clip_agents/: __init__.py  cut_point_agent.py  dialogue_classifier.py  pacing_agent.py  quality_filter.py
backend/src/edit_planner/schemas/: __init__.py  agent_response.py  assembly_input.py  cut_decision.py
backend/src/mongodb/: __init__.py  client.py  config.py  gridfs_service.py
backend/src/mongodb/repositories/: __init__.py  blueprint_repository.py  job_repository.py  manifest_repository.py
backend/src/mongodb/schemas/: __init__.py  documents.py
backend/src/pipeline/: __init__.py  job_runner.py  progress_reporter.py
backend/src/style_extractor/: __init__.py  analyze_otio.py  providers.py  service.py
backend/src/style_extractor/schemas/: __init__.py  clip.py  gap.py  instructions.py  ordering.py  otio_analysis.py  style_profile.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/: Layout.tsx
frontend/src/components/DownloadButton/: DownloadButton.tsx
frontend/src/components/FileUpload/: FileUpload.tsx
frontend/src/components/ProgressTracker/: ProgressTracker.tsx
frontend/src/components/ui/: Button.tsx  GlassCard.tsx  Input.tsx  Skeleton.tsx  StatusIndicator.tsx  index.ts
frontend/src/pages/: JobDetailPage.tsx  JobsListPage.tsx
frontend/src/store/: jobStore.ts  progressStore.ts
frontend/src/types/: api.ts  progress.ts
src/asset_annotator/: __init__.py  annotator.py
src/asset_annotator/schemas/: __init__.py  ear.py  eye.py  manifest.py
src/common/: __init__.py
src/edit_planner/: __init__.py  providers.py  service.py
src/edit_planner/clip_agents/: __init__.py  dialogue_classifier.py  quality_filter.py
src/edit_planner/schemas/: __init__.py  assembly_input.py  instructions.py  job_status.py
src/example/: otio.otio  style_profile_result.py
src/style_extractor/: analyze_otio.py  service.py
src/style_extractor/schemas/: __init__.py  clip.py  instructions.py  metrics.py  otio_analysis.py  style_profile.py  track.py  transition.py
